--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ background: radial-gradient(#e2c3e5 5px,
 
 h1,
 h2 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-color: #75077d ;
   border-radius: 20px;
   color: white;
